syntax = "proto3";

package nanoci.remote;

enum AgentStatus {
	UNKNOWN = 0;
	IDLE = 1;
	BUSY = 2;
}
